--- a/index.html
+++ b/index.html
@@ -1,23 +1,95 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Моё портфолио</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Портфолио — Лиса Геращенко</title>
   <style>
-    body { font-family: Arial; margin: 40px; background: #f5f5f5; }
-    h1 { color: #333; }
-    .project { margin-bottom: 20px; }
+    body {
+      font-family: "Segoe UI", Arial, sans-serif;
+      background-color: #f9f9f9;
+      color: #222;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #222;
+      color: #fff;
+      text-align: center;
+      padding: 60px 20px;
+    }
+    header h1 {
+      font-size: 2.5em;
+      margin: 0;
+    }
+    header p {
+      font-size: 1.2em;
+      color: #ccc;
+    }
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    section {
+      margin-bottom: 60px;
+    }
+    h2 {
+      border-bottom: 2px solid #222;
+      padding-bottom: 10px;
+    }
+    .project {
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      padding: 20px;
+      margin-top: 20px;
+    }
+    .project h3 {
+      margin-top: 0;
+    }
+    .project a {
+      color: #007acc;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .project a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      background: #222;
+      color: #ccc;
+      text-align: center;
+      padding: 30px 0;
+      font-size: 0.9em;
+    }
   </style>
 </head>
 <body>
-  <h1>Привет! Я Лиса 👋</h1>
-  <p>Я программист и люблю создавать интересные проекты.</p>
 
-  <h2>Мои проекты:</h2>
-  <div class="project">
-    <h3>File Searcher</h3>
-    <p>Приложение для поиска файлов по критериям (Java 21).</p>
-    <a href="https://github.com/твое_имя/FileSearcher">Смотреть код</a>
-  </div>
+  <header>
+    <h1>Лиса Геращенко</h1>
+    <p>Программист • JS • C# • Python</p>
+  </header>
+
+  <main>
+    <section id="about">
+      <h2>Обо мне</h2>
+      <p>Привет! Я увлекаюсь программированием и люблю создавать полезные приложения. 
+      Изучаю C# и Python, интересуюсь алгоритмами, структурами данных и пользовательскими интерфейсами.</p>
+    </section>
+
+
+    <section id="contact">
+      <h2>Контакты</h2>
+      <p>📧 Email: <a href="mailto:your.email@example.com">alisa020306@gmail.com</a></p>
+      <p>🔗 GitHub: <a href="https://github.com/твое_имя" target="_blank">github.com/lisanna0812</a></p>
+    </section>
+  </main>
+
+  <footer>
+    © 2025 Gerashchenko Alisa
+  </footer>
+
 </body>
 </html>
