--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Портфолио — Лиса Геращенко</title>
+  <title>Портфолио — Gerashchenko Alisa</title>
   <style>
     body {
       font-family: "Segoe UI", Arial, sans-serif;
