--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Портфолио — Gerashchenko Alisa</title>
+  <title>Portfolio — Gerashchenko Alisa</title>
   <style>
     body {
       font-family: "Segoe UI", Arial, sans-serif;
@@ -68,22 +68,22 @@
 <body>
 
   <header>
-    <h1>Лиса Геращенко</h1>
-    <p>Программист • JS • C# • Python</p>
+    <h1>Gerashchenko Alisa</h1>
+    <p>Programmer • C# • Python</p>
   </header>
 
   <main>
     <section id="about">
-      <h2>Обо мне</h2>
-      <p>Привет! Я увлекаюсь программированием и люблю создавать полезные приложения. 
-      Изучаю C# и Python, интересуюсь алгоритмами, структурами данных и пользовательскими интерфейсами.</p>
+      <h2>About me</h2>
+      <p>Hi! I am interested in programming and I like to create useful applications. 
+      I study C# and Python, and I'm interested in algorithms, data structures, and user interfaces.</p>
     </section>
 
 
     <section id="contact">
-      <h2>Контакты</h2>
+      <h2>Contacts</h2>
       <p>📧 Email: <a href="mailto:your.email@example.com">alisa020306@gmail.com</a></p>
-      <p>🔗 GitHub: <a href="https://github.com/твое_имя" target="_blank">github.com/lisanna0812</a></p>
+      <p>🔗 GitHub: <a href="https://github.com/lisanna0812" target="_blank">github.com/lisanna0812</a></p>
     </section>
   </main>
 
